# act_project

./: .gitmessage.txt  db.sqlite3  pyproject.toml  requirements.txt  test.sh
.github/workflows/: checks.yml
config/: settings.py  urls.py
members/: admin.py  authentication_backends.py  custom_provider.py  forms.py  models.py  provider.py  serializers.py  urls.py  validators.py  views.py
members/migrations/: 0001_initial.py  0002_company_address_user_address.py  0003_alter_user_options_remove_user_gender_and_more.py  0004_user_company_url.py  0005_user_gender.py
members/tests/: test_models.py  test_serializers.py  test_views.py
pages/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_bookmark_remove_recruitdetail_deadline_and_more.py  0003_actor_actorimage_actorvideo_agerange_education_and_more.py
templates/: company_register.html  login.html  user_register.html
